modules/noosphere/taghmata/nixidy/manifests/prod/lidarr/Service-lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8686
  selector:
    app: lidarr
  type: ClusterIP
