modules/noosphere/taghmata/nixidy/manifests/prod/lidarr/Ingress-lidarr-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    category: yarr
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Music collection manager
    glance/icon: di:lidarr
    glance/id: lidarr
    glance/name: Lidarr
    glance/parent: lidarr
    glance/url: https://lidarr.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: lidarr-ip-root
  namespace: yarr
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: lidarr
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lidarr.noosphere.uk
      secretName: lidarr-tls
